--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    class Game {
+    <pre>
+      class Game {
   void setup() {
   }
   void draw() {
@@ -708,5 +709,6 @@ void draw() {
 void mousePressed() {
   currentGame.handleMousePressed();
 }
+    </pre>
   </body>
 </html>
