--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <pre>
+    <code>
       class Game {
   void setup() {
   }
@@ -709,6 +709,6 @@ void draw() {
 void mousePressed() {
   currentGame.handleMousePressed();
 }
-    </pre>
+    </code>
   </body>
 </html>
