--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <ul>
+    <pre>
       class Game {
-  void setup() {
-  }
-  void draw() {
-  }
-  void handleMousePressed() {
-  }
-  void drawRestartButton() {
-    fill(200);
-    rect(width / 2 - 100, height / 2 + 50, 200, 50);
-    fill(0);
-    textSize(32);
-    text("Restart", width / 2, height / 2 + 75);
-  }
+      void setup() {
+      }
+      void draw() {
+      }
+      void handleMousePressed() {
+      }
+      void drawRestartButton() {
+        fill(200);
+        rect(width / 2 - 100, height / 2 + 50, 200, 50);
+        fill(0);
+        textSize(32);
+        text("Restart", width / 2, height / 2 + 75);
+      }
 
   void drawMainMenuButton() {
     fill(200);
@@ -709,6 +709,6 @@ void draw() {
 void mousePressed() {
   currentGame.handleMousePressed();
 }
-    </ul>
+    </pre>
   </body>
 </html>
